Fix alignment of equals button, which was pulling down neighboring buttons.
BUG=179527


Review URL: https://chromiumcodereview.appspot.com/12942002

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@189319 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: dae878cfe240116ff0331f9f20828752e3a740fc

--- a/chrome/common/extensions/docs/examples/apps/calculator/app/style.css
+++ b/chrome/common/extensions/docs/examples/apps/calculator/app/style.css
@@ -93,6 +93,7 @@ body {
   background-position: -183px -135px;
   height: 90px;
   margin: 0 0 -45px;
+  vertical-align: top;
   width: 60px;
 }
 
